--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -703,21 +703,32 @@ C: Use kubectl config get-contexts to review the output.
 
 D: Use kubectl config use-context and kubectl config view to review the output.
 
-Answer: C (D will be correct)
+Answer: C (D is correct)
+
+- D is correct. A lot details mentioned in this group. Here I only say about eliminating answers. As we go down to between C and D. The question is want to review a inactive configure. So, to me, C is viewing info about all configure while D is apply a specific config and viewing it. So I eliminate C to go with D.
+
+**kubectl config use-context**
+
+- we’ve not yet addressed how to manage multiple kubectl configurations.[1]
 
 ```
+1. Check which cluster is active.
 kubectl config get-contexts
 CURRENT   NAME          CLUSTER AUTHINFO           NAMESPACE
 *         white         white   dazwilkin
           black         black   dazwilkin
+2. Switch a cluster
+kubectl config use-context black
+  Switched to context "black"
+kubectl config use-context white
+  Switched to context "white"
+3. View cluster config
+kubectl config view
 ```
 
-- D is correct. A lot details mentioned in this group. Here I only say about eliminating answers. As we go down to between C and D. The question is want to review a inactive configure. So, to me, C is viewing info about all configure while D is apply a specific config and viewing it. So I eliminate C to go with D.
-
-- C is correct , Use kubectl config get-contexts to review the output : shows the clusters and the configurations and based on the output we can identify the inactive configurations
-
 **Links:**
-https://www.examtopics.com/discussions/google/view/20299-exam-associate-cloud-engineer-topic-1-question-5-discussion/
+
+1. https://medium.com/google-cloud/kubernetes-engine-kubectl-config-b6270d2b656c
 
 <hr />
 
@@ -777,10 +788,6 @@ D: Start the licensing server with an automatic ephemeral IP address, and then p
 Answer: A
 
 - The correct answer is Option A.
-
-- To deploy the licensing server on Compute Engine and ensure that the application can reach it, you should reserve the IP 10.0.3.21 as a static internal IP address and assign it to the licensing server.
-
-- By reserving IP 10.0.3.21 as a static internal IP address, you can ensure that the application can reach the licensing server at that IP address without changing the application's configuration.
 
 - To reserve the IP 10.0.3.21 as a static internal IP address and assign it to a Compute Engine instance using gcloud, you can use the following command:
 
@@ -909,38 +916,28 @@ D: Create a docker image from the Dockerfile and upload it to Cloud Storage. Cre
 
 Answer: C
 
-**Hello App**
+- The correct answer is Option C. To deploy a Docker container on Kubernetes Engine, you should first create a Docker image from the Dockerfile and push it to Container Registry, which is a fully-managed Docker container registry that makes it easy for you to store, manage, and deploy Docker container images. Then, you can create a Deployment YAML file that specifies the image to use and other desired deployment options, and use the kubectl command-line tool to create the deployment based on the YAML file.
 
-- Dockerfile
-- main.go
-- Dockerfile is used to build the Docker image for the application.
+- Option A is incorrect because kubectl app deploy is not a valid command.
+
+- Option B is incorrect because gcloud app deploy is used to deploy applications to App Engine, not Kubernetes Engine.
+
+- Option D is incorrect because it involves storing the image in Cloud Storage rather than Container Registry.
+
+**Create the Deployment**
+
+- To run hello-app in your cluster, you need to deploy the application by running the following command:[3]
 
 ```
-// 1. Download the hello-app source code and Dockerfile by running the following commands:
-
-git clone https://github.com/GoogleCloudPlatform/kubernetes-engine-samples
-cd kubernetes-engine-samples/hello-app
-
-// 2. Build and tag the Docker image for hello-app:
-docker build -t us-cenral1-docker.pkg.dev/${PROJECT_ID}/hello-repo/hello-app:v1 .
-
-// 3. Run the docker images command to verify that the build was successful:
-docker images
-
-// Output
-REPOSITORY                                                 TAG     IMAGE ID       CREATED          SIZE
-us-west1-docker.pkg.dev/my-project/hello-repo/hello-app    v1      25cfadb1bf28   10 seconds ago   54 MB
+kubectl create deployment hello-server \
+    --image=us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
 ```
-
-> C is correct.
-> A can be eliminated because kubectl app \* is not a valid command
-> B can be eliminated because gcloud app deploy deploys on app engine, not on kubernetes (also it still requires a config file pointing to the image).
-> D is not correct, since you cannot deploy a container image directly from GCS
 
 **Links:**
 
 1. https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/tree/main/hello-app
 2. https://www.examtopics.com/discussions/google/view/18826-exam-associate-cloud-engineer-topic-1-question-12-discussion/
+3. https://cloud.google.com/kubernetes-engine/docs/deploy-app-cluster
 
 <hr />
 
@@ -983,6 +980,7 @@ gcloud deployment-manager deployments update my-deployment --config=new_config.y
 **Links:**
 
 1. https://cloud.google.com/sdk/gcloud/reference/deployment-manager/deployments/update
+2. https://cloud.google.com/sdk/gcloud/reference/deployment-manager/deployments
 
 <hr />
 
@@ -1376,6 +1374,13 @@ D: Reference the monitoring pod in a cluster initializer at the GKE cluster crea
 
 Answer: B
 
+- B is right:[2]
+  Some typical uses of a DaemonSet are:
+
+  - running a cluster storage daemon on every node
+  - running a logs collection daemon on every node
+  - running a node monitoring daemon on every node
+
 - Kubernetes has several ways to deploy applications, including **deployments**, **DaemonSets** and **StatefulSets**. But each resource type has unique benefits, drawbacks and use cases.
 - Like deployments, DaemonSets are files. T
   ```
@@ -1390,7 +1395,10 @@ Answer: B
 - DaemonSets are most often used to run background software, such as a **monitoring agent**, on each node in a cluster. DaemonSets are **not typically used to deploy the main apps** hosted on Kubernetes.
 
 Links:
-https://www.techtarget.com/searchitoperations/tip/Compare-Kubernetes-StatefulSet-vs-deployment-vs-DaemonSet
+
+1. https://www.techtarget.com/searchitoperations/tip/Compare-Kubernetes-StatefulSet-vs-deployment-vs-DaemonSet
+
+2. https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
 
 <hr />
 
@@ -1877,6 +1885,14 @@ Answer: A
 **A Custom mode VPC**
 ![](images/54-3.png)
 
+- Selected Answer: A
+
+  - It has to be A: one VPC, two subnets in different regions and different CIDR range. (It would also be valid to have both subnets in the same region.)
+
+  - What about option B? We know that "each primary or secondary IPv4 range for all subnets in a VPC network must be a unique valid CIDR block" (read here https://cloud.google.com/vpc/docs/subnets#ipv4-ranges ). Thus, prod and test subnets cannot overlap -> option B is not valid.
+
+  - Options C and D are not valid neither, because "all the VMs must be able to reach each other" - this will not happen if we distribute the VMs across two VPC.
+
 **Links:**
 
 1. https://cloud.google.com/vpc/docs/vpc#subnet-ranges
@@ -2043,19 +2059,16 @@ D: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new clu
 
 Answer: A
 
-The question mentioned that "GKE container emitted a huge number of logs", in my opinion A is correct.
+- I think A is right.
 
-| Resource type            | Description                                          |
-| ------------------------ | ---------------------------------------------------- |
-| container(GKE Container) | A Google Kubernetes Engine (GKE) container instance. |
+- GKE Containers have more log than GKE Cluster Operations:
 
-- **project_id**:
-- **cluster_name**:
-- **namespace_id**:
-- **instance_id**:
-- **pod_id**:
-- **container_name**:
-- **zone**:
+![](images/76-1.png)
+![](images/76-2.png)
+
+**Links:**
+
+1. https://cloud.google.com/logging/docs/api/v2/resource-list
 
 <hr />
 
@@ -2391,19 +2404,57 @@ resource.type="gce_instance"
 **Question 90**
 You are using Deployment Manager to create a Google Kubernetes Engine cluster. Using the same Deployment Manager deployment, you also want to create a DaemonSet in the kube-system namespace of the cluster. You want a solution that uses the fewest possible services. What should you do?
 
+A. Add the cluster's API as a new Type Provider in Deployment Manager, and use the new type to create the DaemonSet.
+
+B. Use the Deployment Manager Runtime Configurator to create a new Config resource that contains the DaemonSet definition.
+
+C. With Deployment Manager, create a Compute Engine instance with a startup script that uses kubectl to create the DaemonSet.
+
+D. In the cluster's definition in Deployment Manager, add a metadata that has kube-system as key and the DaemonSet manifest as value.
+
 D: In the cluster's definition in Deployment Manager, add a metadata that has kube-system as key and the DaemonSet manifest as value.
 
 Answer: C (**A is correct**)
 
-- [Adding an API as a type provider](https://cloud.google.com/deployment-manager/docs/configuration/type-providers/creating-type-provider)
+**Basic** link[1]
 
-  > This page describes how to add an API to Google Cloud Deployment Manager as a type provider. To learn more about types and type providers, read the Types overview documentation.
+**Types**
 
-  > A type provider exposes all of the resources of a third-party API to Deployment Manager as base types that you can use in your configurations. These types must be directly served by a RESTful API that supports Create, Read, Update, and Delete (CRUD).
+To create a resource in Deployment Manager, you must specify a type.[1]
+
+```
+resources:
+- name: the-first-vm
+  type: compute.v1.instance # The type of resource to deploy
+  ...
+```
+
+**Syntax**
+
+```
+type: [API].[VERSION].[RESOURCE]
+For example, compute.v1.instance.
+```
+
+**Adding an API as a type provider**
+
+```
+resources:
+  name: a-deployment
+  type: my-project/my-awesome-type-provider:some-collection
+  properties:
+  …
+```
+
+<hr />
 
 - [Cloud Deployment Manager & Kubernetes](https://medium.com/google-cloud/cloud-deployment-manager-kubernetes-2dd9b8124223)
 
-<hr />
+Links:
+
+1. https://cloud.google.com/deployment-manager/docs/fundamentals#types
+2. https://cloud.google.com/deployment-manager/docs/configuration/type-providers/creating-type-provider
+3. <hr />
 
 **Question 91**
 You are building an application that will run in your data center. The application will use Google Cloud Platform (GCP) services like AutoML. You created a service account that has appropriate access to AutoML. You need to enable authentication to the APIs from your on-premises environment. What should you do?
@@ -2673,56 +2724,44 @@ D: Create a HAProxy pod in the cluster to load-balance the traffic to all the po
 
 Answer: A
 
-```
+HAProxy is HTTP only, doesnt support HTTPS, so you can reject option D
+https://www.haproxy.org/#desc
 
-// 1. Create a container cluster
-gcloud container clusters create loadbalancedcluster
+Cluster IP - is an internal IP, you cannot expose public externally. reject option B
 
-// 2.Deploying a web application
-// load-balancing/web-deployment.yaml
-// Apply the resource to the cluster:
-kubectl apply -f web-deployment.yaml
+out of option A and C
 
-// 3. Exposing your Deployment inside your cluster
-// load-balancing/web-service.yaml
-kubectl apply -f web-service.yaml
-NAME TYPE CLUSTER-IP EXTERNAL-IP PORT(S) AGE
-web NodePort 10.35.245.219 <none> 8080:32640/TCP 5m
+C, port 443 is https but public DNS is not going to give you a load balancing
+A is the right choice,
+kubernets ingress exposes HTTPS
+https://kubernetes.io/docs/concepts/services-networking/ingress/
 
-//---
-In the sample output, the node port for the web Service is 32640. Also, note that there is no external IP allocated for this Service. Since the GKE nodes are not externally accessible by default, creating this Service does not make your application accessible from the internet.
+and cloud load balancer is the right choice which will help to expose the app to public
 
-//---
-To make your HTTP(S) web server application publicly accessible, you must create an Ingress resource.
+**ClusterIp exposure < NodePort exposure < LoadBalancer exposure**[3]
 
-// 4. Creating an Ingress resource
-// load-balancing/basic-ingress.yaml
-// Apply the resource to the cluster:
-kubectl apply -f basic-ingress.yaml
+**ClusterIP**
 
-// 5. Visiting your application
-
-kubectl get ingress basic-ingress
-NAME HOSTS ADDRESS PORTS AGE
-basic-ingress \* 203.0.113.12 80 2m
+A ClusterIP service is the default Kubernetes service. It gives you a service inside your cluster that other apps inside your cluster can access. There is no external access.[2]
 
 ```
-
-**ClusterIp exposure < NodePort exposure < LoadBalancer exposure**
-
-- ClusterIp
-  Expose service through k8s cluster with ip/name:port
-- NodePort
-  Expose service through Internal network VM's also external to k8s ip/name:port
-- LoadBalancer
-  Expose service through External world or whatever you defined in your LB.
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-internal-service
+spec:
+  selector:
+    app: my-app
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
+    protocol: TCP
+```
 
 **Links:**
 
 1. https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
 2. https://medium.com/google-cloud/kubernetes-nodeport-vs-loadbalancer-vs-ingress-when-should-i-use-what-922f010849e0
 3. https://stackoverflow.com/questions/41509439/whats-the-difference-between-clusterip-nodeport-and-loadbalancer-service-types
-
-```
-
-```
