--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -674,7 +674,23 @@ C: Create a custom role by removing delete permissions, and add users to that ro
 
 D: Create a custom role by removing delete permissions. Add users to the group, and then add the group to the custom role.
 
-Answer: A (A or D but I select A)
+Answer: A (A or D but D will be correct.)
+
+**Answer: D**
+
+1. don't think A works properly.
+   roles/bigquery.user has bigquery.datasets.create. And the documentation states:
+
+> Additional, allows the creation of new datasets within the project; the creator is granted the BigQuery Data Owner role (roles/bigquery.dataOwner) on these new datasets.
+
+If bigquery.user creates a new dataset, it's likely that bigquery.user will get permission to delete that dataset. This means that bigquery.user may have permission to delete data.
+https://cloud.google.com/bigquery/docs/access-control
+
+2. A bigquery.user will get a "data owner" role on the datasets he creates. That means he can delete those data sets he created. In that sense A fails to that extent.
+
+**Answer is A.**
+
+- See the question carefully "accidentally deleting the datasets" it is saying not to delete "the" datasets which means original dataset which existed before his creation .So answer is A.
 
 - Since roles/bigquery user role doesn't have delete permission, as per the GCP best practice, if we do not have pre-defined roles to perform an action, then go for custom role.
 
@@ -691,15 +707,20 @@ C: Install the google-cloud-sdk-datastore-emulator component using the apt get i
 
 D: Install the cloud-datastore-emulator component using the gcloud components install command.
 
-Answer: D
+Answer: D (C is correct)
 
-- From: https://cloud.google.com/datastore/docs/tools/datastore-emulator which said clearly
-  gcloud components install cloud-datastore-emulator So D is correct
+**I believe answer is C**
+https://cloud.google.com/sdk/docs/downloads-apt-get
 
-```
-///--- The Datastore emulator is a component of the Google Cloud CLI's gcloud CLI. Use the gcloud components install command to install the Datastore emulator:
-gcloud components install cloud-datastore-emulator
-```
+The question is not about the datastore command itself but from where we should run the update command on the Ubuntu to install the component.
+
+**I believe the answer is C...**
+
+- It is a tricky question!! The question states, "The Cloud SDK was installed from the Google Cloud Ubuntu package repository." For those, who aren't that familiar with Debian/Ubuntu, D seems like an attractive answer. It works as a way to install Datastore...but it does NOT fit the context of the question.
+
+- I recommend looking back to G Cloud SDK installation (Debian/Ubuntu): https://cloud.google.com/sdk/docs/install#deb
+
+- Read the "Installation Steps" in the documentation. In Step 3, "sudo apt-get update && sudo apt-get install google-cloud-sdk". Then, Step 4 is additionally adding other components, such as "sudo apt-get install google-cloud-sdk-datastore-emulator".
 
 <hr />
 
@@ -807,8 +828,24 @@ D: Create a node pool of instances with GPUs, and enable autoscaling on this nod
 
 Answer: D
 
-- Creating an autoscaling GPU node pool
-  To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.
+**A is not correct because you can't add a GPU node to an existing GKE cluster**
+
+**Limitations**
+
+Before using GPUs on GKE, keep in mind the following limitations:
+
+- You cannot add GPUs to existing node pools.
+- GPU nodes cannot be live migrated during maintenance events.
+- GPUs are only supported with general-purpose N1 machine types.
+- GPUs are not supported in Windows Server node pools
+
+REF: https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#limitations
+
+So the answer should be D
+
+**Creating an autoscaling GPU node pool**
+
+To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.
 
 ```
 gcloud container node-pools create p100 \
@@ -1141,7 +1178,11 @@ C: Create a Cloud Monitoring alerting policy to send an alert to Google Cloud Su
 
 D: Create a Cloud Monitoring alerting policy to send an alert to webhook when Cloud Spanner CPU is over or under your threshold. Create a Cloud Function that listens to HTTP and resizes Spanner resources accordingly.
 
-Answer: A
+Answer: A (Correct is D)
+
+**Selected Answer: D**
+
+Without knowing that much, you can discard easily B,C as they don't make any sense. Automation should be a key in this answer. Also you should discard "A" as with a CronJob you won't spann on time as it will be a fixed time checking. So the only one that is left is D, as just creating an alert and sending it to "something else" (in this case a webhook) in an automated way, should be the common sense way of handling this.
 
 <hr />
 
@@ -1187,6 +1228,10 @@ C: SSL Proxy Load Balancer
 D: Internal TCP/UDP Load Balancer. Add a firewall rule allowing ingress traffic from 0.0.0.0/0 on the target instances.
 
 Answer: C
+
+- TCP traffic -> SSL offload -> SSL Proxy
+- C is the correct Answer,
+  SSL proxy load balancer with Traffic Type - TCP with SSL offload, for global IPv4, IPv6, external ports for load balancing - 25,43,110,143,195,443,465,587,700,993,995,1883,5222
 
 <hr />
 
