--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -760,18 +760,18 @@ C: In the Google Platform Console, go to the Resource Manage and move all projec
 
 D: In the Google Cloud Platform Console, create a new billing account and set up a payment method.
 
-Answer: C
+Answer: C (D will be correct.)
 
-- C is incomplete. Moving projects under an organisation doesn't change their linked billing project.
-  https://cloud.google.com/resource-manager/docs/migrating-projects-billing
+- C is incomplete. Moving projects under an organisation doesn't change their linked billing project.[1]
 
-- Note: The link between projects and billing accounts is preserved, irrespective of the hierarchy. When you move your existing projects into the organization they will continue to work and be billed as they used to before the migration, even if the corresponding billing account has not been migrated yet.
+**Change the billing account for a project**
 
-- D is incomplete as well, after setting the billing account in the organisation you need to link the projects to the new billing account.
+- Cloud Billing accounts can be used across organization resources. Moving a project from one organization resource to another won't impact billing, and charges will continue against the old billing account.[1]
 
-- https://cloud.google.com/billing/docs/how-to/billing-access#relationships-between-resources
+- The given answers make D the only possible solution. C can not be right, you all need to look it up here:[2]
 
-<hr />
+1. https://cloud.google.com/resource-manager/docs/project-migration#change_billing_account
+2. https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing
 
 **Question 29**
 
