--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1125,6 +1125,17 @@ D: Delete the current instance template and replace it with a new instance templ
 
 Answer: C
 
+**Answer is A**
+
+As many have mentioned here C and D is straight NO, C talks about updating the instance template and D talks about deleting an instance template BUT as per google documentation you cannot delete an instance template nor update it if it is in use. So A is the only one the makes sense here.
+
+**How to update instance templates**
+Instance templates are designed to create instances with identical configurations. So you cannot update an existing instance template or change an instance template after you create it.[1]
+
+Links:
+
+1. https://cloud.google.com/compute/docs/instance-templates#how_to_update_instance_templates
+
 **The boot disk already exists**
 
 - By default, a new boot persistent disk is created when you create an instance. The name of the boot disk matches the name of the VM. If you name a VM my-instance, the disk is also named my-instance. If a persistent disk already exists with that name, the request fails. To resolve this issue, you can optionally take a snapshot, and then delete the existing persistent disk.[1]
@@ -1132,8 +1143,6 @@ Answer: C
 **Links:**
 
 1. https://cloud.google.com/compute/docs/troubleshooting/troubleshooting-migs#the_boot_disk_already_exists
-2. [Lab Review: Configuring an HTTP Load Balancer with Autoscaling](https://www.youtube.com/watch?v=a890xluKfwI)
-3. [MIGs](https://github.com/hirokoymj/gcp-study-note/blob/master/qwiklabs/lab-HTTP-Load-Balancer.md)
 
 <hr />
 
@@ -1183,6 +1192,14 @@ Answer: A (Correct is D)
 **Selected Answer: D**
 
 Without knowing that much, you can discard easily B,C as they don't make any sense. Automation should be a key in this answer. Also you should discard "A" as with a CronJob you won't spann on time as it will be a fixed time checking. So the only one that is left is D, as just creating an alert and sending it to "something else" (in this case a webhook) in an automated way, should be the common sense way of handling this.
+
+- The recommended maximums for CPU utilization.[1]
+
+- The Autoscaler architecture consists of Cloud Scheduler, two Pub/Sub topics, two Cloud Functions, and Firestore. The Cloud Monitoring API is used to obtain CPU utilization and storage metrics for Spanner instances.[1]
+
+Links:
+
+1. https://cloud.google.com/architecture/autoscaling-cloud-spanner
 
 <hr />
 
@@ -1399,9 +1416,26 @@ C: Store credentials for service accounts with appropriate access for Google ser
 
 D: Store credentials for your user account with appropriate access for Google services in a config file, and deploy this config file with your application.
 
-Answer: A
+Answer: A (B is correct)
+
+**Authenticate workloads using service accounts: Best practices**
+
+- Correct Answer is (B):
+
+In general, Google recommends that each instance that needs to call a Google API should run as a service account with the minimum permissions necessary for that instance to do its job. In practice, this means you should configure service accounts for your instances with the following process:
+
+Create a new service account rather than using the Compute Engine default service account.
+Grant IAM roles to that service account for only the resources that it needs.
+Configure the instance to run as that service account.
+Grant the instance the https://www.googleapis.com/auth/cloud-platform scope to allow full access to all Google Cloud APIs, so that the IAM permissions of the instance are completely determined by the IAM roles of the service account.
+Avoid granting more access than necessary and regularly check your service account permissions to make sure they are up-to-date.[1]
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/access/create-enable-service-accounts-for-instances#best_practices
 
 <hr />
+
 Question 156
 You need to create a Compute Engine instance in a new project that doesn't exist yet. What should you do?
 
@@ -1590,6 +1624,20 @@ D: Create a route on the VPC to route all traffic to the instance over the VPN t
 
 Answer: A
 
+**should be A.**
+
+- A - If the VM does not have public IP it is not routable from Internet. Correct answear
+- B - it is about how to access Google Services API. It does not tell about ingress Internet traffic
+- C - It is about egress traffic
+- D - It could be but we do not know anything about Internet ingress traffic to on prem. What's more default route tells about egress traffic to Internet. Nothing how Internet can access Compute instance.
+
+**A.**
+
+VMs cannot communicate over the internet without a public IP address. Private Google Access permits access to Google APIs and services in Google's production infrastructure.
+https://cloud.google.com/vpc/docs/private-google-access
+
+![](images/163-private-google-access.png)
+
 **Cloud VPN**
 
 - VPC and on-premises
@@ -1654,6 +1702,7 @@ D: Create a new cluster with both n1""standard""2 and n2""highmem""16 nodes. Red
 Answer: B
 
 <hr />
+
 **Question 167**
 You have an application that uses Cloud Spanner as a database backend to keep current state information about users. Cloud Bigtable logs all events triggered by users. You export Cloud Spanner data to Cloud Storage during daily backups. One of your analysts asks you to join data from Cloud Spanner and Cloud Bigtable for specific users. You want to complete this ad hoc request as efficiently as possible. What should you do?
 
@@ -1819,7 +1868,27 @@ C: Set up Cloud VPN between your Google Cloud VPC and the internal network of th
 
 D: Ask the operations partner to generate SSH key pairs, and add the public keys to the VM instances.
 
-Answer: D
+Answer: D(A is correct)
+
+![](images/173-2.png)
+![](images/173-1.png)
+
+- VM access: 1. OSLogin, 2. SSH key, 3. Identity-Aware Proxy
+
+**Choose an access method**
+
+If you have Linux virtual machine (VM) instances running on Google Cloud, you might need to share or restrict user or application access to your VMs.
+
+If you need to manage user access to your Linux VM instances, you can use one of the following methods:
+
+- OS Login
+- Managing SSH keys in metadata
+- Temporarily grant a user access to an instance
+
+Links:
+
+1. https://www.youtube.com/watch?v=jZdXyWQuIW0
+2. https://cloud.google.com/iap/docs/external-identities
 
 <hr />
 
